samples/_failures_safe/1761326110_bb6ee4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1844c25f.c: In function ‘main’:
./samples/SAFE/__tmp_1844c25f.c:158:5: error: expected expression at end of input
  158 |     return
      |     ^~~~~~
./samples/SAFE/__tmp_1844c25f.c:158:5: error: expected declaration or statement at end of input
